# wn-editor-extended

./: .gitignore  .replit  CHANGELOG.md  CLAUDE.md  README.md  api.md  architecture.md  behavior.md  comparison-report-wn_edit.md  models.md  packaging.md  pipeline.md  pyproject.toml  replit.md  schema.md  testplan.md  validation.md
.github/workflows/: ci.yml
data/: awn4_experiment.db
docs/: DEVELOPER_LOG.md  REVIEW_APPLICATION_FEASIBILITY.md  REVIEW_APPLICATION_FEASIBILITY_V2.md  api-reference.md  batch-change-request-spec.md  editing-actions.md  wn-editor-extended-assessment.md
docs/audit/: 01-scope-and-objectives.md  02-current-state.md  03-baseline-metrics.md  04-technology-context.md  05-review-checklist.md  06-stakeholder-notes.md  concurrency-test-report.md  run_baseline.py
docs/design/: api.md  architecture.md  behavior.md  known-issues.md  models.md  packaging.md  pipeline.md  schema.md  testplan.md  validation.md
docs/research/: Architect onboarding.md  comparison-report.md
examples/: batch_changes.yaml
resources/: GWA relation documentation.md  WN-LMF 1.4 schema specification.md
src/wordnet_editor/: __init__.py  db.py  editor.py  exceptions.py  exporter.py  history.py  importer.py  models.py  relations.py  validator.py
tests/: conftest.py  test_batch.py  test_changelog.py  test_concurrency_scenarios.py  test_db.py  test_db_schema.py  test_definitions.py  test_editor.py  test_entries.py  test_entry_form_editor.py  test_history.py  test_ili.py  test_import_export.py  test_issue_entry_id.py  test_lexicon_versioning.py  test_lexicons.py  test_metadata.py  test_relations.py  test_senses.py  test_synsets.py  test_utilities.py  test_validation.py  test_validation_extra.py  test_validation_ili_duplicate.py  test_validation_syn_007.py
tests/fixtures/: extension.xml  full_features.xml  minimal.xml  two_lexicons.xml
tools/: migrate_v1_to_v2.py
wn_editor/: __init__.py  changelog.py  editor.py
wn_editor/batch/: __init__.py  cli.py  executor.py  parser.py  schema.py  validator.py
wordnet-editor/resources/: Open English WordNet FORMAT.md  example WN-LMF XML file.xml
