[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordnet-editor"
version = "0.1.0"
description = "A pure Python editing library for WordNets"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["wordnet", "linguistics", "nlp", "editor", "lexicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "wn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wordnet_editor"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/wordnet_editor/db.py" = ["E501"]
"src/wordnet_editor/importer.py" = ["E501"]
"src/wordnet_editor/exporter.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["wn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
