[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wn-editor-extended"
version = "1.0.0"
description = "A pure Python editing library for WordNets. Full CRUD, automatic inverse relations, compound operations, validation, edit history, and WN-LMF 1.4 import/export."
authors = [
    {name = "Salah Abdo", email = "Salah.Abdo.Tech@gmail.com"}
]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["wordnet", "linguistics", "nlp", "editor", "lexicon", "wn-lmf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "wn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Salah-Sal/wn-editor-extended"
Repository = "https://github.com/Salah-Sal/wn-editor-extended"
Issues = "https://github.com/Salah-Sal/wn-editor-extended/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wordnet_editor"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/wordnet_editor/db.py" = ["E501"]
"src/wordnet_editor/importer.py" = ["E501"]
"src/wordnet_editor/exporter.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["wn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
